internal/resource/templates/apps.v1.daemonsets.yaml
# name: DaemonSet
# description: Runs a Pod on every node
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ""
spec:
  selector:
    matchLabels:
      app: ""
  template:
    metadata:
      labels:
        app: ""
    spec:
      containers:
        - name: ""
          image: ""
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
