internal/resource/templates/core.v1.services_clusterip.yaml
# name: ClusterIP Service
# description: Internal cluster service
apiVersion: v1
kind: Service
metadata:
  name: ""
spec:
  selector:
    app: ""
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
