internal/resource/templates/core.v1.services_nodeport.yaml
# name: NodePort Service
# description: Service accessible via node port
apiVersion: v1
kind: Service
metadata:
  name: ""
spec:
  type: NodePort
  selector:
    app: ""
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
