internal/resource/templates/networking.k8s.io.v1.ingresses.yaml
# name: Ingress
# description: HTTP routing rule with TLS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ""
spec:
  ingressClassName: ""
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ""
                port:
                  number: 80
