internal/resource/templates/networking.k8s.io.v1.networkpolicies.yaml
# name: NetworkPolicy
# description: Restricts pod-to-pod traffic
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ""
spec:
  podSelector:
    matchLabels:
      app: ""
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ""
